--- a/index.html
+++ b/index.html
@@ -2,22 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>For My Afsana ❤️</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will You Be My Valentine?</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <div class="container">
         <div class="gif_container">
-            <img src="https://gifdb.com/images/high/cute-love-bear-roses-ou7zho5oosxnpo6k.gif" alt="Cute GIF">
+            <img src="https://gifdb.com/images/high/cute-love-bear-roses-ou7zho5oosxnpo6k.gif" alt="Love GIF">
         </div>
-        <h1>Will you be my Valentine?</h1>
+
+        <h1>My Dearest Afsana ❤️</h1>
+        <p class="sub_text">From the moment you came into my life, everything became beautiful.</p>
+        <h2>Will you stay with me forever? 💍</h2>
+
         <div class="buttons">
-            <button class="yes-button" onclick="handleYesClick()">Yes</button>
+            <button class="yes-button" onclick="handleYesClick()">Yes, Always ❤️</button>
             <button class="no-button" onclick="handleNoClick()">No</button>
         </div>
-        
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
