--- a/yes_page.html
+++ b/yes_page.html
@@ -2,16 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>She Said Yes ❤️</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Knew you would say yes!</title>
-    <link rel="stylesheet" href="./yes_style.css">
+    <link rel="stylesheet" href="yes_style.css">
 </head>
 <body>
+
     <div class="container">
-        <h1 class="header_text">Knew you would say yes!</h1>
+        <h1 class="header_text">I Love You So Much Afsana ❤️</h1>
+        <p class="love_text">
+            You are my happiness, my peace, my forever.  
+            Thank you for choosing me. 💍❤️
+        </p>
+
         <div class="gif_container">
             <img src="https://media.tenor.com/gUiu1zyxfzYAAAAi/bear-kiss-bear-kisses.gif">
         </div>
     </div>
+
 </body>
 </html>
