--- a/index.html
+++ b/index.html
@@ -2,24 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>For My Afsana ❤️</title>
+    <title>For Afsana</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <div class="container">
-        <div class="gif_container">
-            <img src="https://gifdb.com/images/high/cute-love-bear-roses-ou7zho5oosxnpo6k.gif" alt="Love GIF">
-        </div>
+    <div class="hearts"></div>
 
-        <h1>My Dearest Afsana ❤️</h1>
-        <p class="sub_text">From the moment you came into my life, everything became beautiful.</p>
-        <h2>Will you stay with me forever? 💍</h2>
+    <div class="container">
+        <h1>Afsana</h1>
+
+        <p class="sub_text">
+            You’ve brought peace and warmth into my life.
+        </p>
+
+        <h2>May I have the honor of being yours?</h2>
 
         <div class="buttons">
-            <button class="yes-button" onclick="handleYesClick()">Yes, Always ❤️</button>
-            <button class="no-button" onclick="handleNoClick()">No</button>
+            <button class="yes-button" onclick="startMusic(); handleYesClick();">Yes</button>
+            <button class="no-button" onclick="startMusic(); handleNoClick();">No</button>
         </div>
     </div>
 
