--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>For Afsana</title>
+    <title>For My Afsana ❤️</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <div class="container">
-        <h1>Afsana</h1>
+        <div class="gif_container">
+            <img src="https://gifdb.com/images/high/cute-love-bear-roses-ou7zho5oosxnpo6k.gif" alt="Love GIF">
+        </div>
 
-        <p class="sub_text">
-            You’ve brought peace, warmth, and happiness into my life.
-        </p>
-
-        <h2>May I have the honor of being yours?</h2>
+        <h1>My Dearest Afsana ❤️</h1>
+        <p class="sub_text">From the moment you came into my life, everything became beautiful.</p>
+        <h2>Will you stay with me forever? 💍</h2>
 
         <div class="buttons">
-            <button class="yes-button" onclick="handleYesClick()">Yes</button>
+            <button class="yes-button" onclick="handleYesClick()">Yes, Always ❤️</button>
             <button class="no-button" onclick="handleNoClick()">No</button>
         </div>
     </div>
