--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
         <h1>My Dearest Afsana ❤️</h1>
         <p class="sub_text">From the moment you came into my life, everything became beautiful.</p>
-        <h2>Will you stay with me forever? 💍</h2>
-
+       <h2>May I continue choosing you, today and always?? 💍</h2>
         <div class="buttons">
             <button class="yes-button" onclick="handleYesClick()">Yes, Always ❤️</button>
             <button class="no-button" onclick="handleNoClick()">No</button>
