--- a/yes_page.html
+++ b/yes_page.html
@@ -9,10 +9,10 @@
 <body>
 
     <div class="container">
-        <h1 class="header_text">I Love You So Much Afsana ❤️</h1>
+        <h1 class="header_text">Afsana ❤️</h1>
         <p class="love_text">
             You are my happiness, my peace, my forever.  
-            Thank you for choosing me. 💍❤️
+            Thank you for choosing me. ❤️
         </p>
 
         <div class="gif_container">
